<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="next_chapter">Next chapter</string>
    <string name="previous_chapter">Previous chapter</string>
    <string name="playback_speed">Playback speed</string>
</resources>
