...
enum class PodcastScheduleMode {
  Simple,
  Advanced,
}

enum class PodcastScheduleSimpleInterval(val presetCron: String? = null) {
  Custom,
  Daily,
  Every12Hours("0 */12 * * *"),
  Every6Hours("0 */6 * * *"),
  Every2Hours("0 */2 * * *"),
  EveryHour("0 * * * *"),
  Every30Minutes("*/30 * * * *"),
...
